--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build_macos:
-    if: github.repository_owner == 'viamrobotics'
+    # if: github.repository_owner == 'viamrobotics'
     runs-on: macos-latest
     strategy:
       fail-fast: false
@@ -37,7 +37,7 @@ jobs:
           conan create .
 
   build_linux_ubuntu_jammy:
-    if: github.repository_owner == 'viamrobotics'
+    # if: github.repository_owner == 'viamrobotics'
     runs-on:  ${{ matrix.runs_on }}
     container:
       image: ${{ matrix.image }}
@@ -94,7 +94,7 @@ jobs:
           conan create .
 
   build_linux_debian:
-    if: github.repository_owner == 'viamrobotics'
+    # if: github.repository_owner == 'viamrobotics'
     runs-on:  ${{ matrix.runs_on }}
     container:
       image: ${{ matrix.image }}
