--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           brew install cmake
           brew install python ninja buf
-          python -m pip install --user conan
+          python -m pip install conan
 
       - name: Build
         run: |
