--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -3,12 +3,12 @@ name: Test conan packages
 on:
   # Run weekdays at 11:15pm UTC, and specify below to only run if there's been new commits
   schedule:
-    - cron: "15 11 * * 1-5" 
+    - cron: "15 11 * * 1-5"
   workflow_dispatch:
 
 jobs:
   prepare:
-    # if: github.repository_owner == 'viamrobotics'
+    if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
@@ -26,7 +26,7 @@ jobs:
           github.event_name == 'schedule'
 
   build_macos:
-    # if: github.repository_owner == 'viamrobotics'
+    if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
     runs-on: macos-latest
     strategy:
@@ -59,7 +59,7 @@ jobs:
           conan create . --build=missing
 
   build_linux_ubuntu_jammy:
-    # if: github.repository_owner == 'viamrobotics'
+    if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
     runs-on:  ${{ matrix.runs_on }}
     container:
@@ -167,7 +167,7 @@ jobs:
               software-properties-common \
               sudo \
               wget
-          
+
           pip install conan
 
       - name: Update CMake for bullseye
