--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -148,6 +148,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies
+        # Note we use pipx below instead of python3-pip, see
+        # https://docs.conan.io/2/installation.html#install-with-pipx
         run: |
           apt-get update
           apt-get -y dist-upgrade
@@ -163,12 +165,12 @@ jobs:
               less \
               ninja-build \
               python3 \
-              python3-pip \
+              pipx \
               software-properties-common \
               sudo \
               wget
 
-          pip install conan
+          pipx install conan
 
       - name: Update CMake for bullseye
         if: ${{ matrix.image  == 'debian:bullseye' }}
@@ -183,5 +185,7 @@ jobs:
       - name: Create package
         shell: bash
         run: |
+          pipx ensurepath
+          source ~/.bashrc
           conan profile detect
           conan create . --build=missing
