--- a/src/viam/api/config/viam-cpp-sdk-libviamapi.pc.in
+++ b/src/viam/api/config/viam-cpp-sdk-libviamapi.pc.in
@@ -8,6 +8,6 @@ Description: @PROJECT_DESCRIPTION@
 URL: @PROJECT_HOMEPAGE_URL@
 Version: @PROJECT_VERSION@
 Requires: grpc++ >= @VIAMCPPSDK_GRPCXX_VERSION@ protobuf >= @VIAMCPPSDK_PROTOBUF_VERSION@
-Libs: -Wl,-rpath,${libdir} -L${libdir} -L@Boost_LIBRARY_DIRS@ @VIAMCPPSDK_VIAM_API_LINK_PREFIX@ -lviamapi @VIAMCPPSDK_VIAM_API_LINK_SUFFIX@
+Libs: -Wl,-rpath,${libdir} -L${libdir} -L@Boost_LIBRARY_DIRS@ -lviamapi
 Cflags: -I${base_includedir} -I${deep_includedir}
 
