--- a/etc/docker/Dockerfile.sdk-build
+++ b/etc/docker/Dockerfile.sdk-build
@@ -4,17 +4,27 @@
 #   docker build --build-arg BASE_TAG=base/bullseye --build-arg GIT_TAG=[...] etc/docker/Dockerfile.sdk-build .
 # You can substitute the bullseye image for whichever you want to use as a base.
 # Note that it is necessary to tag the base image with `-t` and then refer to it using the `BASE_TAG` arg.
+
+ARG REPO_SETUP=git
+
 ARG BASE_TAG
-FROM ${BASE_TAG} AS build-sdk
+
+FROM ${BASE_TAG} AS repo_setup_git
+ARG GIT_TAG
+ONBUILD RUN echo "Checking if GIT_TAG is set" && test -n "${GIT_TAG}"
+ONBUILD RUN git clone https://github.com/viamrobotics/viam-cpp-sdk/ -b ${GIT_TAG}
+
+FROM ${BASE_TAG} AS repo_setup_copy
+ONBUILD COPY . /viam-cpp-sdk/
+
+FROM repo_setup_${REPO_SETUP}
 ENV DEBIAN_FRONTEND=noninteractive
 
-ARG GIT_TAG
 ARG BUILD_TYPE=RelWithDebInfo
 ARG BUILD_SHARED=ON
 ARG BUILD_TESTS=OFF
 ARG BUILD_EXAMPLES=OFF
-
-RUN git clone https://github.com/viamrobotics/viam-cpp-sdk/ -b ${GIT_TAG}
+ARG EXTRA_CMAKE_ARGS
 
 WORKDIR /viam-cpp-sdk
 
@@ -25,7 +35,8 @@ RUN mkdir build && \
     -DBUILD_SHARED_LIBS=${BUILD_SHARED} \
     -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
     -DVIAMCPPSDK_BUILD_TESTS=${BUILD_TESTS} \
-    -DVIAMCPPSDK_BUILD_EXAMPLES=${BUILD_EXAMPLES} 
+    -DVIAMCPPSDK_BUILD_EXAMPLES=${BUILD_EXAMPLES} \
+    ${EXTRA_CMAKE_ARGS}
 
 RUN cmake --build build --target install && \
     cmake --install build
