RSDK-9077: Docker containers for module development (#310)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,5 +22,15 @@ jobs:
       ###########################################
       - name: build-docker-test
         run: |
-          docker build -t cpp . -f etc/docker/tests/Dockerfile.debian.bullseye
-          docker run -e BUILD_SHARED=${{ matrix.BUILD_SHARED }} --rm -i -w /tmp cpp /bin/bash
+          docker build -t cpp . -f etc/docker/base-images/Dockerfile.debian.bullseye
+          docker build -t cpp-test . -f etc/docker/Dockerfile.sdk-build \
+            --build-arg BASE_TAG=cpp \
+            --build-arg REPO_SETUP=copy \
+            --build-arg BUILD_SHARED=${{ matrix.BUILD_SHARED }} \
+            --build-arg BUILD_TESTS=ON \
+            --build-arg BUILD_EXAMPLES=ON \
+            --build-arg "EXTRA_CMAKE_ARGS=\
+              -DVIAMCPPSDK_CLANG_TIDY=ON \
+              -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}"
+
+          docker run -w /viam-cpp-sdk/build -t --entrypoint /viam-cpp-sdk/etc/docker/tests/run_test.sh cpp-test /bin/bash
