--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -1,7 +1,9 @@
 name: Test conan packages
 
 on:
-  # Run weekdays at 11:15pm UTC
+  # Runs for PRs that directly change conan code, and weekdays at 11:15pm UTC.
+  # Additional logic in the prepare job below makes it so scheduled builds only run
+  # on new commits.
   schedule:
     - cron: "15 11 * * 1-5"
   workflow_dispatch:
