add clang-format to base image

--- a/etc/docker/base-images/Dockerfile.debian.bookworm
+++ b/etc/docker/base-images/Dockerfile.debian.bookworm
@@ -41,4 +41,5 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t llvm-toolchain-bookworm-15 \
     clang-15 \
-    clang-tidy-15
+    clang-tidy-15 \
+    clang-format
