--- a/etc/docker/base-images/Dockerfile.debian.bullseye
+++ b/etc/docker/base-images/Dockerfile.debian.bullseye
@@ -39,7 +39,8 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t llvm-toolchain-bullseye-15 \
     clang-15 \
-    clang-tidy-15
+    clang-tidy-15 \
+    clang-format
 
 RUN apt-get -y --no-install-recommends install -t bullseye-backports \
     cmake
