--- a/etc/docker/base-images/Dockerfile.ubuntu.focal
+++ b/etc/docker/base-images/Dockerfile.ubuntu.focal
@@ -42,7 +42,8 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t llvm-toolchain-focal-15 \
     clang-15 \
-    clang-tidy-15
+    clang-tidy-15 \
+    clang-format
 
 RUN apt-get -y install cmake
 
