--- a/etc/docker/base-images/Dockerfile.ubuntu.jammy
+++ b/etc/docker/base-images/Dockerfile.ubuntu.jammy
@@ -42,6 +42,7 @@ RUN apt-get update
 
 RUN apt-get -y --no-install-recommends install -t llvm-toolchain-jammy-15 \
     clang-15 \
-    clang-tidy-15
+    clang-tidy-15 \
+    clang-format
 
 RUN apt-get -y install cmake
