--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,8 +8,7 @@ jobs:
   run-tests:
     if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/viamrobotics/canon:amd64
+    container: ghcr.io/viamrobotics/cpp-base:bullseye-amd64
     strategy:
       matrix:
         include:
@@ -17,20 +16,20 @@ jobs:
           - BUILD_SHARED: OFF
     steps:
       - uses: actions/checkout@v4
-      ###########################################
-      #     necessary installs for building     #
-      ###########################################
-      - name: build-docker-test
+      - name: cmake
         run: |
-          docker build -t cpp . -f etc/docker/base-images/Dockerfile.debian.bullseye
-          docker build -t cpp-test . -f etc/docker/Dockerfile.sdk-build \
-            --build-arg BASE_TAG=cpp \
-            --build-arg REPO_SETUP=copy \
-            --build-arg BUILD_SHARED=${{ matrix.BUILD_SHARED }} \
-            --build-arg BUILD_TESTS=ON \
-            --build-arg BUILD_EXAMPLES=ON \
-            --build-arg "EXTRA_CMAKE_ARGS=\
-              -DVIAMCPPSDK_CLANG_TIDY=ON \
-              -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}"
-
-          docker run -w /viam-cpp-sdk/build -t --entrypoint /viam-cpp-sdk/etc/docker/tests/run_test.sh cpp-test /bin/bash
+          mkdir build
+          cd build
+          cmake .. -G Ninja \
+            -DBUILD_SHARED_LIBS=${{ matrix.BUILD_SHARED }} \
+            -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
+            -DVIAMCPPSDK_BUILD_TESTS=ON \
+            -DVIAMCPPSDK_BUILD_EXAMPLES=ON \
+            -DVIAMCPPSDK_CLANG_TIDY=ON \
+            -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}
+      - name: build
+        run: |
+          cmake --build build --target install
+          cmake --install build
+      - name: test
+        run: etc/docker/tests/run_test.sh
