--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,7 +17,7 @@ jobs:
       - name: verify no uncommitted changes
         run: |
           whoami
-          ls -ls .git
+          ls -ls .git . ..
           git init
           git add .
           ls -ls .git
