--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,7 +17,7 @@ jobs:
       - name: verify no uncommitted changes
         run: |
           whoami
-          chown $USER .
+          chown $(whoami) .
           ls -ls ..
           git init
           git add .
