--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
   workflow_dispatch:
     inputs:
-      clang-tidy:
+      no-tidy:
         type: boolean
-        default: true
+        description: set to true to build without clang-tidy (2x faster)
 
 jobs:
   run-tests:
@@ -29,7 +29,7 @@ jobs:
             -DVIAMCPPSDK_OFFLINE_PROTO_GENERATION=ON \
             -DVIAMCPPSDK_BUILD_TESTS=ON \
             -DVIAMCPPSDK_BUILD_EXAMPLES=ON \
-            -DVIAMCPPSDK_CLANG_TIDY=${{ inputs.clang-tidy && 'ON' || 'OFF' }} \
+            -DVIAMCPPSDK_CLANG_TIDY=${{ inputs.no-tidy && 'OFF' || 'ON' }} \
             -DVIAMCPPSDK_SANITIZED_BUILD=${{ matrix.BUILD_SHARED }}
       - name: build
         run: |
